# Project-Template

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/include/Application/: Application.h
Application/src/: Application.cpp  main.cpp
Engine/: CMakeLists.txt
Engine/include/Core/: Core.h
Engine/src/Core/: Core.cpp
